--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1900,6 +1900,9 @@
 		& .style7{
 			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../cisco/images/bg.png")'));
 		}
+		& .style8{
+			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../perforce/images/bg.png")'));
+		}
 	}
 
 	body.is-mobile {
