--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1397,7 +1397,7 @@
 
 						// border-bottom: 3px solid _palette(fg);
 						box-shadow: 
-						inset 0 -15px 0 #b4e7f8,
+						inset 0 -15px 0 rgba(254, 255, 163, 0.5),
 						inset 0 -5px 0 _palette(fg);
 						width: 25%;
 					}
