--- a/sass/style.scss
+++ b/sass/style.scss
@@ -70,6 +70,12 @@
 		);
 
 	/* Basic */
+	
+
+	*::selection {
+		color: #323232 !important;
+		background: rgba(254, 255, 163, 0.5) !important;
+	}
 
 	body {
 		background: _palette(fg);
@@ -107,6 +113,8 @@
 
 	a {
 		@include vendor('transition', ('color #{_duration(transitions)} ease', 'border-bottom-color #{_duration(transitions)} ease'));
+
+
 		border-bottom: dotted 1px _palette(accent1, fg);
 		color: inherit;
 		text-decoration: none;
@@ -127,10 +135,33 @@
 	}
 
 	p {
+		// font-family: "Lucida Grande","Lucida Sans Unicode", Tahoma, Sans-Serif;
 		font-family: 'Lora', 'times new roman', serif;
 		font-size: 17px;
 		line-height: 1.7;
 		margin: 0 0 _size(element-margin) 0;
+
+		a {
+			border-bottom: none;
+			text-decoration: none;
+			position: relative;
+			text-shadow: -1px -1px 0 _palette(accent7,bg), 1px -1px 0 _palette(accent7,bg), -1px 1px 0 _palette(accent7,bg), 1px 1px 0 _palette(accent7,bg);
+			background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, _palette(accent7,fg) 1px, _palette(accent7,fg) 3px, rgba(0, 0, 0, 0) 3px);
+		}
+		@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
+			a {
+				background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, _palette(accent7,fg) 1px,  1.5px, rgba(0, 0, 0, 0) 1.5px);
+			}
+		}
+		a:hover, a:focus {
+			color: #55abad;
+			background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #55abad 1px, #55abad 3px, rgba(0, 0, 0, 0) 3px);
+		}
+		@media (-webkit-min-device-pixel-ratio: 1.5), (min-resolution: 144dpi) {
+			a:hover, a:focus {
+				background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #55abad 1px, #55abad 1.5px, rgba(0, 0, 0, 0) 1.5px);
+			}
+		}
 	}
 
 	h1, h2, h3, h4, h5, h6 {
