--- a/sass/style.scss
+++ b/sass/style.scss
@@ -142,6 +142,7 @@
 		margin: 0 0 _size(element-margin) 0;
 
 		a {
+			font-weight: 600;
 			border-bottom: none;
 			text-decoration: none;
 			position: relative;
