--- a/sass/style.scss
+++ b/sass/style.scss
@@ -166,6 +166,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
+		font-family: "source-code-pro", sans-serif;
 		color: _palette(fg-bold);
 		font-weight: _font(weight-extrabold);
 		letter-spacing: _size(letter-spacing-alt);
