--- a/sass/style.scss
+++ b/sass/style.scss
@@ -166,7 +166,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-family: "source-code-pro", sans-serif;
+		// font-family: "source-code-pro", sans-serif;
 		color: _palette(fg-bold);
 		font-weight: _font(weight-extrabold);
 		letter-spacing: _size(letter-spacing-alt);
@@ -1934,7 +1934,7 @@
 			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("../cisco/images/bg.png")'));
 		}
 		& .style8{
-			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.2), rgba(0,0,0,0.2))', 'url("../perforce/images/bg.png")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.25), rgba(0,0,0,0.25))', 'url("../perforce/images/bg.png")'));
 		}
 	}
 
