--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1080,9 +1080,9 @@
 			width: 60%;
 		}
 
-		&:nth-child(2n) {
-			@include vendor('flex-direction', 'row-reverse');
-		}
+		// &:nth-child(2n) {
+		// 	@include vendor('flex-direction', 'row-reverse');
+		// }
 
 		// @for $i from 1 through _misc(max-spotlights) {
 		// 	$j: 0.075 * $i;
