--- a/sass/style.scss
+++ b/sass/style.scss
@@ -136,9 +136,9 @@
 
 	p {
 		// font-family: "Lucida Grande","Lucida Sans Unicode", Tahoma, Sans-Serif;
-		// font-family: 'Lora', 'times new roman', serif;
-		font-size: 0.875rem;
-		line-height: 1.5;
+		font-family: 'Lora', 'times new roman', serif;
+		font-size: 1.125rem;
+		line-height: 1.7;
 		margin: 0 0 _size(element-margin) 0;
 
 		a {
@@ -181,7 +181,7 @@
 	}
 
 	h2 {
-		font-size: 1.275rem;
+		font-size: 1.35em;
 		line-height: 1.75em;
 
 		@include breakpoint(small) {
