--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1400,7 +1400,7 @@
 		overflow-y: auto;
 		padding: 1em 2em;
 		position: fixed;
-		border-left: solid 2px _palette(accent1, border2-bg);
+		border-left: solid 2px _palette(accent1, border);
 		right: 0;
 		top: 0;
 		width: 20em;
@@ -1425,6 +1425,7 @@
 
 
 				> a {
+					@include vendor('transition', 'width #{_duration(transitions)} ease');
 					border: 0;
 					color: inherit;
 					display: block;
@@ -1432,6 +1433,7 @@
 					font-size: 0.85em;
 					outline: 0;
 					text-decoration: none;
+					white-space: nowrap;
 					text-transform: uppercase;
 
 
@@ -1441,15 +1443,27 @@
 
 					&:hover {
 						// @include vendor('transform', 'translateX(1em)');
-						@include vendor('transition', 'box-shadow #{_duration(transitions)} ease-in-out');
 						// padding: 0 1em;
 						// border-left: solid 2px _palette(bg);
-
-						// border-bottom: 3px solid _palette(fg);
-						box-shadow: 
-						inset 0 -15px 0 rgba(254, 255, 163, 0.5),
-						inset 0 -5px 0 _palette(fg);
-						width: 25%;
+						// border-bottom: 3px solid rgba(254, 255, 163, 0.5);
+						// background-color: rgba(254, 255, 163, 0.5);
+						// box-shadow: 
+						// inset 0 -15px 0 rgba(254, 255, 163, 0.5),
+						// inset 0 -5px 0 _palette(fg);
+						// width: 25%;
+						&:before {
+							z-index: -1;
+							box-shadow: 
+							inset 0 -30px 0 rgba(254, 255, 163, 0.5);
+							// inset 0 -5px 0 _palette(fg);
+							content: '';
+							content: auto;
+							position: absolute;
+							display: block;
+							height: 2em;
+							width: 5em;
+							// top: 2.3em;
+						}
 					}
 				}
 
