--- a/sass/style.scss
+++ b/sass/style.scss
@@ -102,7 +102,7 @@
 		}
 
 		@include breakpoint(large) {
-			// font-size: 12pt;
+			font-size: 12pt;
 		}
 
 		@include breakpoint(small) {
@@ -1453,8 +1453,7 @@
 						// width: 25%;
 						&:before {
 							z-index: -1;
-							box-shadow: 
-							inset 0 -30px 0 rgba(254, 255, 163, 0.5);
+							box-shadow: inset 0 -30px 0 rgba(254, 255, 163, 0.5);
 							// inset 0 -5px 0 _palette(fg);
 							content: '';
 							content: auto;
@@ -1468,20 +1467,20 @@
 				}
 
 				&:first-child  {
-					padding-bottom: 1em;
+					padding-bottom: 2em;
 					&:after {
-						// border-bottom: solid 2px _palette(accent1, border2-bg);;
+						// border-bottom: solid 2px _palette(accent1, border2-bg);
 						border-bottom: solid 1px _palette(accent1, border2-bg);
 						content: '';
 						display: block;
-						height: 1.5em;
+						height: 2em;
 						position: absolute;
 						width: 30em;
 						left: -1em;
 					}
 				}
 				&:nth-last-child(3) {
-					padding-bottom: 1em;
+					padding-bottom: 2em;
 					&:after {
 						border-bottom: solid 1px _palette(accent1, border2-bg);
 						content: '';
