--- a/google-design/prototype/css/styles.css
+++ b/google-design/prototype/css/styles.css
@@ -15,30 +15,30 @@
  */
 
  @font-face { 
-  font-family: Proxima Nova;
+  font-family: Proxima Nova Regular;
   src: url('../../../fonts/ProximaNova-Regular.otf');
   font-weight: normal;
   font-style: normal;
 }
-/* @font-face { 
-  font-family: Proxima Nova;
+ @font-face { 
+  font-family: Proxima Nova Bold;
   src: url('../../../fonts/ProximaNova-Bold.otf');
-  font-weight: bold;
+  font-weight: normal;
   font-style: normal;
 }
  @font-face { 
-  font-family: Proxima Nova;
+  font-family: Proxima Nova Black;
   src: url('../../../fonts/ProximaNova-Black.otf');
-  font-weight: bolder;
+  font-weight: normal;
   font-style: normal;
 }
  @font-face { 
   font-family: Proxima Nova;
   src: url('../../../fonts/ProximaNova-Light.otf');
-  font-weight: lighter;
+  font-weight: normal;
   font-style: normal;
 }
-*/
+
 html, body {
   font-family: 'Open Sans', 'Helvetica', sans-serif;
   font-family: 'Proxima Nova', 'Helvetica', sans-serif;;
@@ -229,22 +229,33 @@ _:-ms-input-placeholder, :root .demo-graph {
   font-size: 1em;
 }
 .demo-updates .mdl-card__title {
+  -webkit-transition-duration: 0.28s;
+  transition-duration: 0.28s;
+  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition-property: text-decoration;
+  transition-property: text-decoration;
   min-height: 200px;
-  background-image: -moz-linear-gradient(top, rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("../images/yard-sale.jpg");
-  background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("../images/yard-sale.jpg");
-  background-image: -ms-linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("../images/yard-sale.jpg");
-  background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.4)), url('../images/yard-sale.jpg');
+  background-image: -moz-linear-gradient(top, rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("../../images/sale.png");
+  background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("../../images/ysale.png");
+  background-image: -ms-linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("../../images/sale.png");
+  background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.4)), url('../../images/sale.png');
   /*background-image: url('../images/yard-sale.jpg');*/
-  background-position: 0 100%;
+  /*background-attachment: fixed;*/
+  background-position: right bottom;
+  background-size: cover;
   background-repeat: no-repeat;
+  -webkit-mask-image: -webkit-radial-gradient(circle, white, black);
 }
 .demo-updates .mdl-card__title:hover {
+  cursor: pointer;
   min-height: 200px;
+  text-decoration: underline;
 /*  background-image: -moz-linear-gradient(top, rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("../images/yard-sale.jpg");
   background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("../images/yard-sale.jpg");
   background-image: -ms-linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url("../images/yard-sale.jpg");
   background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0.4)), url('../images/yard-sale.jpg');*/
-  background-image: url('../images/yard-sale.jpg');
+  background-image: url('../../images/sale.png');
   background-position: 0 100%;
   background-repeat: no-repeat;
 }
@@ -312,6 +323,50 @@ _:-ms-input-placeholder, :root .demo-graph {
 .demo-cards .mdl-card__title a {
   color: inherit;
 }
+
+.demo-updates .meta {
+  box-sizing: border-box;
+  padding: 16px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+  -ms-flex-pack: start;
+  justify-content: flex-start;
+  height: auto;
+}
+
+.demo-updates .meta > * {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+.demo-updates .meta > *:first-child {
+    margin-right: 8px;
+}
+
 /*
 
 
