--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2097,9 +2097,9 @@
 
 	body.landing {
 		#page-wrapper {
-			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.4), rgba(0,0,0,0.6))', 'url("../images/banner.png")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0))', 'url("../images/banner.png")'));
 			background-attachment: fixed;
-			background-position: center top;
+			background-position: center bottom;
 			background-repeat: no-repeat;
 			background-size: cover;
 			padding-top: 0;
@@ -2118,8 +2118,8 @@
 
 			#banner,
 			.wrapper.style4 {
-				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.4), rgba(0,0,0,0.6))', 'url("../images/banner.png")'));
-				background-position: center top;
+				@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0))', 'url("../images/banner.png")'));
+				background-position: center bottom;
 				background-repeat: no-repeat;
 				background-size: cover;
 			}
