--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -122,10 +122,10 @@ $palette: (
 
 	accent7: (
 		bg:				#ffffff,
-		fg-bold:		#2E3842,
+		fg-bold:		#333031,
 		fg:				#4E4852,
 		fg-light:		#8E8892,
-		border:			#2E3842,
+		border:			#333031,
 		border-bg:		rgba(0,0,0,0.0375),
 		border2:		#bfbfbf,
 		border2-bg:		rgba(0,0,0,0.1)
