--- a/sass/style.scss
+++ b/sass/style.scss
@@ -23,6 +23,12 @@
 	font-style: normal;
 }
 @font-face {
+	font-family: Proxima Nova Semibold Italic;
+	src: url('../fonts/ProximaNova-SemiboldItalic.otf');
+	font-weight: normal;
+	font-style: normal;
+}
+@font-face {
 	font-family: Proxima Nova Light;
 	src: url('../fonts/ProximaNova-Light.otf');
 	font-weight: normal;
@@ -1405,9 +1411,11 @@
 		height: 100%;
 		max-width: 80%;
 		overflow-y: auto;
-		padding: 1em 2em;
+		padding: 3em;
+		// padding: 1em 2em;
 		position: fixed;
-		border-left: solid 1px _palette(accent1, border2-bg);
+		// border-left: solid 1px _palette(accent1, border2-bg);
+		box-shadow: -1px -1px 10px _palette(accent1, border2-bg);
 		right: 0;
 		top: 0;
 		width: 20em;
@@ -1434,11 +1442,12 @@
 				> a {
 					@include vendor('transition', ('color #{_duration(transitions)} ease', 'border-bottom-color #{_duration(transitions)} ease'));
 					// @include vendor('transition', 'width #{_duration(transitions)} ease');
+					font-family: "Proxima Nova Semibold Italic",Helvetica,Arial;
 					border: 0;
 					color: inherit;
 					display: block;
-					letter-spacing: 0.05em;
-					font-size: 0.82rem;
+					letter-spacing: 0.075em;
+					font-size: 0.9rem;
 					outline: 0;
 					text-decoration: none;
 					white-space: nowrap;
@@ -1450,7 +1459,7 @@
 					}
 
 					&:hover {
-						color: #71E1DF;
+						color: #F15942;
 						// text-decoration: underline;
 						// background-color: rgba(254, 255, 163, 0.5);
 						// @include vendor('transform', 'translateX(1em)');
@@ -1482,25 +1491,26 @@
 					padding-bottom: 2em;
 					&:after {
 						// border-bottom: solid 2px _palette(accent1, border2-bg);
-						border-bottom: solid 1px _palette(accent1, border2-bg);
+						// border-bottom: solid 1px _palette(accent1, border2-bg);
+						border-bottom: solid 1px _palette(bg);
 						content: '';
 						display: block;
 						height: 2em;
 						position: absolute;
-						width: 30em;
-						left: -1em;
+						width: 16em;
+						left: 2em;
 					}
 				}
 				&:nth-last-child(3) {
 					padding-bottom: 2em;
 					&:after {
-						border-bottom: solid 1px _palette(accent1, border2-bg);
+						border-bottom: solid 1px _palette(bg);
 						content: '';
 						display: block;
-						height: 1.5em;
+						height: 2em;
 						position: absolute;
-						width: 30em;
-						left: -1em;
+						width: 16em;
+						left: 2em;
 					}
 				}
 			}
@@ -1511,11 +1521,12 @@
 
 
 		.close {
-			// @include vendor('transition', ('background-image 0.25s ease'));
-			background-image: url('images/close.svg');
+			@include vendor('transition', ('opacity 0.25s ease'));
+			background-image: url('images/close-alt.svg');
 			background-position: 4.85em 1em;
 			background-repeat: no-repeat;
 			border: 0;
+			opacity: 0.6;
 			cursor: pointer;
 			display: block;
 			height: 3em;
@@ -1526,7 +1537,8 @@
 			width: 7em;
 
 			&:hover {
-				background-image: url('images/close-alt.svg');
+				opacity: 1;
+				// background-image: url('images/close-alt.svg');
 				// &:before {
 				// 	z-index: -1;
 				// 	box-shadow: inset 0 -30px 0 rgba(254, 255, 163, 0.3);
@@ -1541,9 +1553,9 @@
 		}
 
 
-		@include breakpoint(small) {
-			padding: 3em 1.5em;
-		}
+		// @include breakpoint(small) {
+		// 	padding: 3em 1.5em;
+		// }
 	}
 
 	body.is-menu-visible {
