--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1459,7 +1459,7 @@
 					}
 
 					&:hover {
-						color: #F15942;
+						color: #F53F23;
 						// text-decoration: underline;
 						// background-color: rgba(254, 255, 163, 0.5);
 						// @include vendor('transform', 'translateX(1em)');
