--- a/sass/style.scss
+++ b/sass/style.scss
@@ -179,9 +179,9 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		// font-family: "Proxima Nova Semibold", sans-serif;
+		font-family: "Proxima Nova Semibold", sans-serif;
 		color: _palette(fg-bold);
-		font-weight: _font(weight-bold);
+		// font-weight: _font(weight-bold);
 		letter-spacing: _size(letter-spacing-alt);
 		// line-height: 1em;
 		margin: 0 0 (_size(element-margin) * 0.5) 0;
@@ -200,6 +200,7 @@
 
 		@include breakpoint(small) {
 			font-size: 1.1em;
+			font-size: 1.35em;
 			line-height: 1.65em;
 		}
 	}
@@ -979,6 +980,8 @@
 		@include breakpoint(small) {
 			height: 3.75em;
 			line-height: 3.75em;
+			font-size: 0.95em;
+		    max-width: 15em !important;
 		}
 	}
 
@@ -1313,7 +1316,11 @@
 
 			&:hover {
 				// color: _palette($p, border);
-				background-color: _palette($p, border-bg);
+				// background-color: _palette($p, border-bg);
+				background-color: transparent;
+				opacity: 0.7;
+				// box-shadow: inset 0 0 0 2px _palette($p, border2-bg);
+				// color: _palette($p, border2-bg)
 			}
 
 			&:active {
@@ -1413,6 +1420,7 @@
 		max-width: 80%;
 		overflow-y: auto;
 		padding: 3em;
+		overflow-x: hidden;
 		// padding: 1em 2em;
 		position: fixed;
 		// border-left: solid 1px _palette(accent1, border2-bg);
@@ -1431,13 +1439,6 @@
 			> li {
 				margin: 1em 0 0 0;
 				padding: 1em 0 0 0;
-
-				// &:first-child {
-				// 	// border-bottom: solid 1px _palette(accent2, border);
-				// 	border-top: 0 !important;
-				// 	// margin-top: 0 !important;
-				// 	padding-top: 0 !important;
-				// }
 
 
 				> a {
@@ -1769,6 +1770,13 @@
 				vertical-align: bottom;
 				text-indent: -999em;
 				direction: ltr;
+
+				@include breakpoint(small) {
+					width: .8em;
+					height: .8em;
+					margin: .8em auto;
+					background-size: .8em .8em;
+				}
 			}
 
 			&:before, &:after {
@@ -2034,6 +2042,10 @@
 		}
 		& .style9{
 			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.0), rgba(0,0,0,0.15))', 'url("../google-design/images/bg.png")'));
+			background-position: center top;
+		}
+		& .style10{
+			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.0), rgba(0,0,0,0.15))', 'url("../wrap/images/banner.jpg")'));
 			background-position: center top;
 		}
 	}
