--- a/sass/style.scss
+++ b/sass/style.scss
@@ -909,6 +909,7 @@
 	.button {
 		@include vendor('appearance', 'none');
 		@include vendor('transition', ('background-color #{_duration(transitions)} ease-in-out', 'color #{_duration(transitions)} ease-in-out'));
+		font-family: "Proxima Nova Semibold";
 		background-color: transparent;
 		border-radius: 0px;
 		border: 0;
@@ -917,7 +918,7 @@
 		cursor: pointer;
 		display: inline-block;
 		font-size: 0.85em;
-		font-weight: _font(weight-bold);
+		// font-weight: _font(weight-bold);
 		height: 3.125em;
 		letter-spacing: _size(letter-spacing-alt);
 		line-height: 3.125em;
