--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2046,8 +2046,9 @@
 			background-position: center top;
 		}
 		& .style10{
-			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.0), rgba(0,0,0,0.15))', 'url("../wrap/images/banner.jpg")'));
+			@include vendor('background-image', ('linear-gradient(top, rgba(93,153,67,0.6), rgba(0,0,0,0))', 'url("../wrap/images/banner.jpg")'));
 			background-position: center top;
+			// #5D9943
 		}
 	}
 
