--- a/sass/style.scss
+++ b/sass/style.scss
@@ -182,6 +182,9 @@
 				background-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0) 1px, #55abad 1px, #55abad 1.5px, rgba(0, 0, 0, 0) 1.5px);
 			}
 		}
+		@include breakpoint(small) {
+			font-size: 1em;
+		}
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -1114,7 +1117,7 @@
 		// 	$j: 0.075 * $i;
 
 		// 	&:nth-child(#{$i}) {
-		// 		background-color: rgba(0,0,0, $j);
+		// 		opacity: $j;
 		// 	}
 		// }
 
@@ -1128,7 +1131,7 @@
 			}
 		}
 
-		@include breakpoint(medium) {
+		@include breakpoint(large) {
 			display: block;
 
 			br {
