--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1072,6 +1072,7 @@
 		}
 	}
 
+	
 	/* Spotlight */
 
 	.spotlight {
@@ -1120,6 +1121,8 @@
 		// 		opacity: $j;
 		// 	}
 		// }
+
+		
 
 		@include breakpoint(large) {
 			.image {
@@ -1431,7 +1434,7 @@
 		height: 100%;
 		max-width: 80%;
 		overflow-y: auto;
-		padding: 3em;
+		padding: 3rem;
 		overflow-x: hidden;
 		// padding: 1em 2em;
 		position: fixed;
@@ -1460,8 +1463,9 @@
 					border: 0;
 					color: inherit;
 					display: block;
-					letter-spacing: 0.075em;
-					font-size: 0.9rem;
+
+					letter-spacing: 0.1em;
+					font-size: 0.80rem;
 					outline: 0;
 					text-decoration: none;
 					white-space: nowrap;
@@ -1470,6 +1474,19 @@
 
 					@include breakpoint(small) {
 						// line-height: 3em;
+					}
+
+					@media
+					only screen and (-webkit-min-device-pixel-ratio: 2),
+					only screen and (   min--moz-device-pixel-ratio: 2),
+					only screen and (     -o-min-device-pixel-ratio: 2/1),
+					only screen and (        min-device-pixel-ratio: 2),
+					only screen and (                min-resolution: 192dpi),
+					only screen and (                min-resolution: 2dppx) { 
+
+						/* Retina-specific stuff here */
+						font-size: 0.9rem;
+						letter-spacing: 0.075em;
 					}
 
 					&:hover {
@@ -1536,7 +1553,7 @@
 
 		.close {
 			@include vendor('transition', ('opacity 0.25s ease'));
-			background-image: url('images/close-alt.svg');
+			background-image: url('images/close.svg');
 			background-position: 4.85em 1em;
 			background-repeat: no-repeat;
 			border: 0;
@@ -2175,4 +2192,100 @@
 				background-color: darken(_palette(bg), 8);
 			}
 		}
+	}
+	iframe {
+		height: 102% !important;
+	}
+	.\34 u\28large\29 {
+		/*width: 33.3%;*/
+	}
+	.wrap-media-embed {
+		&:hover {
+			.wrap-details {
+				display: block;
+				top: 0;
+				left: 0;
+				content: '';
+				position: absolute;
+				width: 100%;
+				z-index: 999;
+				background-color: rgba(33,31,30,0.8);
+				height: 100%;
+			}
+		}
+	}
+
+	.wrap-details {
+		padding: 3em;
+		opacity: 0;
+		position: absolute;
+		z-index: 999;
+		left: 0;
+		right: 0;
+
+		&:hover {
+			position: absolute;
+			background-color: rgba(16,17,18,.9);
+			text-align: center;
+			opacity: 1;
+		}
+
+		h1 {
+			font-family: "Times New Roman";
+			font-size: 1.875rem;
+		}
+		.button {
+			font-size: 0.75rem;
+			box-shadow: inset 0 0 0 1px #fff;
+			height: 3.125em; 
+			line-height: 3.125em; 
+			&:hover {
+				background-color: rgba(16,17,18,0.5);
+				opacity: 0.75;
+			}
+		}
+		.wrap-details-content {
+			* {
+				font-size: 0.6875rem;
+				line-height: 0.975rem;
+			}
+			p {
+				font-size: 0.6875rem;
+				// @include breakpoint(medium) {
+				// 	display: none;
+				// }
+			}
+			strong {
+				font-family: "Proxima Nova Bold";
+			}
+			ul {
+				list-style: none;
+				padding-left: 0;
+				li {
+					padding-left: 0;
+					line-height: 0.975rem;
+				}
+			}
+		}
+	}
+	
+	// @for $i from 1 through _misc(max-wraps) {
+	// 	// $j: 0.075 * $i;
+
+	// 	.wrap-media-embed {
+	// 		&:nth-child(#{$i}) {
+	// 			opacity: $j;
+	// 		}
+	// 	}
+	// }
+
+	.wrap-media-embed:hover:after {
+		background-color: rgba(16,17,18,.9);
+		content: '';
+		position: absolute;
+		width: 100%;
+		z-index: 999;
+	}
+	.wrap-media-embed-overlay:hover {
+		background-color: rgba(16,17,18,.9) !important;
 	}
