--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2193,13 +2193,31 @@
 			}
 		}
 	}
-	iframe {
-		height: 102% !important;
-	}
+
 	.\34 u\28large\29 {
 		/*width: 33.3%;*/
 	}
+	.wraps {
+		&:nth-child(even) {
+			iframe {
+				background-color: #dedede;
+				box-shadow: 0 0 0 1px #dedede;
+			}
+		}
+		&:nth-child(odd) {
+			iframe {
+				background-color: #aaaaaa;
+				box-shadow: 0 0 0 1px #aaaaaa;
+			}
+		}
+	}
 	.wrap-media-embed {
+		iframe {
+			// background-color: #dedede;
+			// @include vendor('background', ('linear-gradient(top, rgba(235,221,214,.5), rgba(235,221,214,.7))'));
+			// background-color: linear-gradient(#dedede,#f5f5f5);
+			height: 102% !important;
+		}
 		&:hover {
 			.wrap-details {
 				display: block;
@@ -2270,11 +2288,14 @@
 	}
 	
 	// @for $i from 1 through _misc(max-wraps) {
-	// 	// $j: 0.075 * $i;
+	// 	$j: 0.075 * $i;
 
-	// 	.wrap-media-embed {
+	// 	.wraps {
 	// 		&:nth-child(#{$i}) {
-	// 			opacity: $j;
+	// 			iframe {
+	// 				background-color: rgba(0,0,0,$j);
+	// 				// opacity: $j;
+	// 			}
 	// 		}
 	// 	}
 	// }
