--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2197,21 +2197,9 @@
 	.\34 u\28large\29 {
 		/*width: 33.3%;*/
 	}
-	.wraps {
-		&:nth-child(even) {
-			iframe {
-				background-color: #dedede;
-				box-shadow: 0 0 0 1px #dedede;
-			}
-		}
-		&:nth-child(odd) {
-			iframe {
-				background-color: #aaaaaa;
-				box-shadow: 0 0 0 1px #aaaaaa;
-			}
-		}
-	}
+
 	.wrap-media-embed {
+		display: none;
 		iframe {
 			// background-color: #dedede;
 			// @include vendor('background', ('linear-gradient(top, rgba(235,221,214,.5), rgba(235,221,214,.7))'));
@@ -2229,6 +2217,18 @@
 				z-index: 999;
 				background-color: rgba(33,31,30,0.8);
 				height: 100%;
+			}
+		}
+		&:nth-child(2n+1) {
+			iframe {
+				background-color: #aaaaaa;
+				box-shadow: 0 0 0 1px #aaaaaa;
+			}
+		}
+		&:nth-child(2n) {
+			iframe {
+				background-color: #dedede;
+				box-shadow: 0 0 0 1px #dedede;
 			}
 		}
 	}
@@ -2287,18 +2287,19 @@
 		}
 	}
 	
-	// @for $i from 1 through _misc(max-wraps) {
-	// 	$j: 0.075 * $i;
+	@for $i from 1 through _misc(max-wraps) {
+		// $j: 0.075 * $i;
 
-	// 	.wraps {
-	// 		&:nth-child(#{$i}) {
-	// 			iframe {
-	// 				background-color: rgba(0,0,0,$j);
-	// 				// opacity: $j;
-	// 			}
-	// 		}
-	// 	}
-	// }
+		.wrap-media-embed {
+			&:nth-child(#{$i}) {
+				display: block;
+				// iframe {
+				// 	background-color: rgba(0,0,0,$j);
+				// 	// opacity: $j;
+				// }
+			}
+		}
+	}
 
 	.wrap-media-embed:hover:after {
 		background-color: rgba(16,17,18,.9);
