--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1092,6 +1092,7 @@
 			img {
 				border-radius: 0;
 				width: 100%;
+				height: 100%;
 				// height: 1em;
 				// border-radius: 50%;
 				// display: block;
@@ -1556,11 +1557,11 @@
 
 		.close {
 			@include vendor('transition', ('opacity 0.25s ease'));
-			background-image: url('images/bars.svg');
+			background-image: url('images/close.svg');
 			background-position: 4.85em 1em;
 			background-repeat: no-repeat;
 			border: 0;
-			opacity: 0.6;
+			opacity: 0.8;
 			cursor: pointer;
 			display: block;
 			height: 3em;
@@ -2051,7 +2052,7 @@
 				@include padding(5em, 3em);
 
 				h2 {
-					font-size: 1.25rem;
+					font-size: 2.25rem;
 					margin: 0 0 (_size(element-margin) * 0.5) 0;
 				}
 			}
